# night-watcher

./: .gitignore  CHANGELOG.md  CLAUDE.md  README-en.md  README.md  clear.ps1  config.example.json  main.py  pyproject.toml
.github/workflows/: build.yml  check.yml  ci.yml  release.yml  reusable.yml
adapter/: __init__.py  nightscout.py  sisensing.py
i18n/: en.toml  zh-cn.toml
libs/: __init__.py  adapter_loader.py  base_adapter.py  cache.py  config.py  i18n.py  logger.py  sgv.py  theme.py
libs/ui/: __init__.py  app.py  chart_view.py  float_widget.py  info_panel.py  settings_dialog.py  tir_view.py
themes/: default.toml
